<resources>
    <string name="app_name">RoomDataBase</string>
    <string name="title_activity_create_subject">CreateSubjectActivity</string>
    <string name="registration_no">Registration No</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="cross_image_content_description">Delete student from SQLite database</string>
    <string name="empty_student_list_message">Student List is Empty!</string>
    <string name="student_name">Student Name</string>
    <string name="update">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_button">Create</string>
    <string name="all_delete">All Delete</string>
    <string name="edit_button_description">Edit Single student information</string>
    <string name="title_create_student">Create New Student</string>
    <string name="student_delete_alert">Are you sure to delete this record?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject_code">Subject Code</string>
    <string name="subject_credit">Subject Credit</string>
    <string name="add_subject_fab_content_description">Add Subject of a Student</string>
    <string name="update_button">Update</string>
    <string name="title_update_student">Update Student</string>
</resources>